--- a/app/src/main/res/layout/activity_add_new.xml
+++ b/app/src/main/res/layout/activity_add_new.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,69 +26,70 @@
 
     </LinearLayout>
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_marginRight="10dp"
-    android:layout_marginLeft="10dp"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-
-    <androidx.cardview.widget.CardView
-
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        app:cardCornerRadius="15dp"
-        android:layout_marginTop="80dp">
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <RelativeLayout
+
+        <androidx.cardview.widget.CardView
+
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/widget_border"
-            android:padding="15dp">
+            android:layout_height="180dp"
+            app:cardCornerRadius="15dp"
+            android:layout_marginTop="80dp">
 
-            <TextView
-                android:id="@+id/t1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="CRAYTS"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:textStyle="bold" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/widget_border"
+                android:padding="15dp">
 
-
-            <TextView
-                android:id="@+id/t2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/t1"
-                android:layout_marginTop="20dp"
-                android:text="Add new CRAYTS to\ncategorize your items"
-                android:textColor="@color/black" />
-
-            <Button
-                android:layout_width="165dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/t2"
-                android:layout_marginTop="19dp"
-
-                android:text="Add new" />
-
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_alignParentRight="true"
-                android:maxHeight="100dp"
-                android:src="@drawable/boxes" />
+                <TextView
+                    android:id="@+id/t1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="CRAYTS"
+                    android:textColor="@color/black"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
 
 
-        </RelativeLayout>
+                <TextView
+                    android:id="@+id/t2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/t1"
+                    android:layout_marginTop="20dp"
+                    android:text="Add new CRAYTS to\ncategorize your items"
+                    android:textColor="@color/black" />
+
+                <Button
+                    android:id="@+id/add_crayt_btn"
+                    android:layout_width="165dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/t2"
+                    android:layout_marginTop="19dp"
+
+                    android:text="Add new" />
+
+                <ImageView
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_alignParentRight="true"
+                    android:maxHeight="100dp"
+                    android:src="@drawable/boxes" />
 
 
-    </androidx.cardview.widget.CardView>
+            </RelativeLayout>
 
 
-</LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -129,6 +132,7 @@
                     android:textColor="@color/black" />
 
                 <Button
+                    android:id="@+id/add_item_btn"
                     android:layout_width="165dp"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/t4"
