--- a/app/src/main/res/layout/activity_add_new.xml
+++ b/app/src/main/res/layout/activity_add_new.xml
@@ -1,45 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/linearLayout7"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="@dimen/top_nav_height"
         android:background="@drawable/bg_heading"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="ADD NEW"
-            android:textStyle="bold"
             android:textAlignment="center"
             android:textColor="@color/black"
+            android:textSize="24dp"
 
-            android:textSize="24dp">
+            android:textStyle="bold">
 
         </TextView>
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout6"
         android:layout_width="match_parent"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
+        tools:layout_editor_absoluteX="10dp">
 
 
         <androidx.cardview.widget.CardView
 
             android:layout_width="match_parent"
             android:layout_height="180dp"
-            app:cardCornerRadius="15dp"
-            android:layout_marginTop="80dp">
+            android:layout_marginTop="80dp"
+            app:cardCornerRadius="15dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -93,18 +98,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
 
 
         <androidx.cardview.widget.CardView
 
             android:layout_width="match_parent"
             android:layout_height="180dp"
-            app:cardCornerRadius="15dp"
-            android:layout_marginTop="80dp">
+            android:layout_marginTop="80dp"
+            app:cardCornerRadius="15dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -156,5 +160,14 @@
 
     </LinearLayout>
 
-</LinearLayout>
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView2"
+        android:name="com.example.freightcrayt.fragments.BottomNav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
 
