--- a/app/src/main/res/layout/activity_category_detail.xml
+++ b/app/src/main/res/layout/activity_category_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,14 +7,18 @@
     tools:context=".activities.CategoryDetail">
 
     <LinearLayout
+        android:id="@+id/linearLayout5"
         android:layout_width="match_parent"
         android:layout_height="@dimen/top_nav_height"
-        android:focusableInTouchMode="true"
         android:background="?attr/colorPrimary"
+        android:focusableInTouchMode="true"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:paddingStart="10dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <ImageView
@@ -57,18 +60,18 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/top_nav_height"
-        android:layout_marginBottom="@dimen/bottom_nav_height"
-        android:paddingTop="15dp">
+        android:layout_height="0dp"
+        android:paddingTop="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/category_detail_bottom_nav"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             android:hint="Search"
             app:boxCornerRadiusBottomEnd="10dp"
             app:boxCornerRadiusBottomStart="10dp"
@@ -94,27 +97,18 @@
             android:layout_marginTop="15dp"
             android:numColumns="auto_fit"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
-            tools:listitem="@layout/collection_item_list_item"/>
+            tools:listitem="@layout/collection_item_list_item" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/bottomAppBar"
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/category_detail_bottom_nav"
+        android:name="com.example.freightcrayt.fragments.BottomNav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:backgroundTint="?colorPrimary"
-        app:menu="@menu/bottom_app_bar"
-        app:navigationIcon="@drawable/ic_round_menu_24"
-        app:navigationIconTint="@color/black" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/bottom_nav_height"
-        app:srcCompat="@drawable/ic_baseline_add_24"
-        app:layout_anchor="@id/bottomAppBar" />
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
