--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,12 +7,16 @@
     tools:context=".activities.UserDetail">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/bottom_nav_height"
+        android:layout_height="0dp"
         android:paddingLeft="25dp"
         android:paddingTop="50dp"
-        android:paddingRight="25dp">
+        android:paddingRight="25dp"
+        app:layout_constraintBottom_toTopOf="@id/user_detail_bottomNav"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -122,8 +125,7 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_boxes_image">
-            </ImageView>
+                android:src="@drawable/ic_boxes_image"></ImageView>
 
             <TextView
                 android:id="@+id/user_totalCrates"
@@ -193,7 +195,17 @@
                 android:text="Sign out" />
         </LinearLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout><![CDATA[
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/user_detail_bottomNav"
+        android:name="com.example.freightcrayt.fragments.BottomNav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" /><![CDATA[
+
 
         android:id="@+id/coordinatorLayout"
         android:layout_width="0dp"
@@ -202,22 +214,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
+
+
+
+
     ]]>
-
-    <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/user_bottomAppBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:backgroundTint="?colorPrimary"
-        app:menu="@menu/bottom_app_bar"
-        app:navigationIcon="@drawable/ic_round_menu_24" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/user_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="69dp"
-        app:layout_anchor="@id/user_bottomAppBar"
-        app:srcCompat="@drawable/ic_baseline_add_24"
-        tools:ignore="SpeakableTextPresentCheck" />
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
