--- a/app/src/main/res/layout/collection_item_list_item.xml
+++ b/app/src/main/res/layout/collection_item_list_item.xml
@@ -26,19 +26,16 @@
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/ic_outline_inbox_24" />
 
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:padding="5dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:orientation="vertical">
 
@@ -64,7 +61,6 @@
                             android:textColor="?android:attr/textColorSecondary"
                             android:textSize="12sp" />
                     </LinearLayout>
-
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
@@ -134,8 +130,6 @@
                         </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
-            </ScrollView>
         </LinearLayout>
-
     </com.google.android.material.card.MaterialCardView>
 </RelativeLayout>
