--- a/app/src/main/res/layout/activity_add_new.xml
+++ b/app/src/main/res/layout/activity_add_new.xml
@@ -18,15 +18,18 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:id = "@+id/addNewText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/add_new_label"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="24dp"
+            android:textSize="20dp"
             android:textStyle="bold">
 
         </TextView>
+
+
 
     </LinearLayout>
 
